2016-07-04  Even Rouault <even.rouault@spatialys.com>

    * VPF: Avoid a missing fcs file in a coverage to prevent opening any
    coverage of the library (fix opening of DNC17/COA17A dataset)
    * VPF: _getNextObject / _getObject functions: validate the value of the tile_id
    to avoid a potential out-of-bounds read. Fix crash on dqyarea@dqy layer
    of DNC17/H1708311.

2016-06-28  Even Rouault <even.rouault@spatialys.com>

    * Fix all warnings about unused variables raised by GCC 4.8

2016-06-28  Even Rouault <even.rouault@spatialys.com>

    * Actually fix build against proj >= 4.8 (assuming that projects.h is installed,
    which is the case in Ubuntu 14.04 for example) (OGDI #71)

2016-06-28  Even Rouault <even.rouault@spatialys.com>

    * Fix memory leak in ADRG driver

2016-06-27  Even Rouault <even.rouault@spatialys.com>

    * Fix mat_inverse() to not use variable length arrays (OGDI #65)

2016-06-27  Even Rouault <even.rouault@spatialys.com>

    * Fix build against proj >= 4.9
    * Grow some buffers in VRF driver (patch by Craig Bruce)
    * Fix compiler warnings raised by GCC 4.4
    * VPF: Fix off-by-one extra write in vpf_colum_name[] in
      read_thematic_index_header(). Reported by clang

2009-05-08  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/feature.c: fix count type to be int32 to avoid
	variable corruption on 64bit systems (#2787502).

2008-05-28  Balint Cristian  <rezso@rdsor.ro>

        * New 3.2.0beta2 release
        * fix path case sensitive problem for vpf driver
        * fix build on GNU/kFreeBSD
        * avoid bashism in makefiles

2007-05-09  Balint Cristian  <cbalint@redhat.com>

        * Prepare for 3.2.0beta2 release.

2007-05-09  Balint Cristian  <cbalint@redhat.com>

From: Even Rouault <even.rouault@mines-paris.org>
Date: Friday 21:14:18

        * fix filename case sensitivy problems (for Unix-like systems).  

        * fix incorrect use of sprintf in vrf_GetMetadata.
